--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon src/server.ts",
     "dev:test": "dotenv -e .env.test nodemon src/server.ts",
     "test": "NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -i",
-    "migrate": "dotenv -e .env.test npx prisma migrate dev"
+    "migrate": "npx prisma migrate dev",
+    "migrate:test": "dotenv -e .env.test npx prisma migrate dev"
   },
   "keywords": [],
   "author": "",
