--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "scripts": {
     "dev": "nodemon src/server.ts",
     "dev:test": "dotenv -e .env.test nodemon src/server.ts",
-    "test": "NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -i",
+    "test": "NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest",
     "migrate": "npx prisma migrate dev",
-    "migrate:test": "dotenv -e .env.test npx prisma migrate dev"
+    "migrate:test": "dotenv -e .env.test npx prisma migrate dev",
+    "seed": "SEED_OPTION=seed dotenv -e .env.test ts-node prisma/seed.ts",
+    "cleardb": "dotenv -e .env.test ts-node prisma/seed.ts",
+    "test:studio": "SEED_OPTION=seed dotenv -e .env.test npx prisma studio"
   },
   "keywords": [],
   "author": "",
